Fix scrollbar ruining layout

--- a/src/components/App/stylesheet.scss
+++ b/src/components/App/stylesheet.scss
@@ -13,7 +13,7 @@
 
   .calendar-container {
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
     display: flex;
     justify-content: center;
   }
@@ -77,7 +77,7 @@
 
     .scroller {
       flex: 1;
-      overflow-y: scroll;
+      overflow-y: auto;
       display: flex;
       flex-direction: column;
       align-items: stretch;
